--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <div class="result_field">
                 <div class="result_images">
                     <span class="user_result">
-                        <img src="images/rock.png" alt=""/>
+                        <img src="images/rock.png" alt="rock"/>
                     </span>
                     <span class="cpu_result">
-                        <img src="images/rock.png" alt=""/>
+                        <img src="images/rock.png" alt="rock"/>
                     </span>
                 </div>
             </div>
